Add footer message

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,7 +40,9 @@
           {% endif %}
         </ul>
       </div>
-
+      <div  class="footer-col  footer-col-3">
+        {{ site.footer_msg }}
+      </div>
     </div>
 
   </div>
