--- a/main.scss
+++ b/main.scss
@@ -70,3 +70,10 @@ table td {
     padding: 6px 13px;
     border: 1px solid #30363d63;
 }
+
+#logo:hover{
+    animation: 500ms linear 1ms 1 logo_anim;
+    animation-fill-mode: backwards;
+}
+
+@keyframes logo_anim { from { transform: rotate3d(0,0,0,0); } to { transform: rotate3d(0, 1, 0, 180deg) }  }
