🎨 Move main scss in _base.scss

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -139,7 +139,7 @@ code {
 
 pre {
     padding: 8px 12px;
-    overflow-x: scroll;
+    overflow-x: auto;
 
     > code {
         border: 0;
@@ -201,4 +201,21 @@ pre {
             fill: $grey-color;
         }
     }
+}
+
+/**
+ * Table
+ **/
+table {
+    border: 1px solid #e8e8e8;
+	background: #eef;
+    width: 100%;
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+
+table th, 
+table td {
+    padding: 6px 13px;
+    border: 1px solid #30363d63;
 }
