--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -242,3 +242,26 @@
         }
     }
 }
+
+/**
+ * Repo list style
+ */
+ .repo-box{
+    border: solid 2px #e8e8e8;
+    border-radius: 15px;
+    padding: 15px;
+    margin: 5px;
+    display: grid;
+    grid-template-rows: 23px 60px 20px;
+  }
+  .repo-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .repo-type{
+    border: solid 2px #e8e8e8;
+    border-radius: 15px;
+    padding: 2px 5px;
+    font-size: 10px;
+    vertical-align: middle;
+  }
