🦊 Add Gitlab link
o

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,6 +38,18 @@
             </a>
           </li>
           {% endif %}
+		  {% if site.gitlab_username %}
+          <li>
+            <a href="https://gitlab.com/{{ site.gitlab_username }}">
+              <span class="icon icon--gitlab">
+                <svg viewBox="0 0 16 16">
+				  <path fill="#828282" d="M 15.762566,6.4189333 15.740224,6.3618412 13.577345,0.71717093 A 0.56347412,0.56347412 0 0 0 13.354769,0.44908632 0.57919513,0.57919513 0 0 0 12.692831,0.48466546 0.57919513,0.57919513 0 0 0 12.500869,0.77591787 L 11.04047,5.2439946 H 5.1268874 L 3.6664881,0.77591787 A 0.56761123,0.56761123 0 0 0 3.4745264,0.48383803 0.57919513,0.57919513 0 0 0 2.8125891,0.44825891 0.56843865,0.56843865 0 0 0 2.5900127,0.71634351 L 0.42299547,6.3585315 0.40148251,6.4156236 A 4.0163045,4.0163045 0 0 0 1.7336313,11.057459 l 0.00745,0.0058 0.019858,0.01407 3.2947929,2.467371 1.6300205,1.233686 0.992906,0.749644 a 0.66772925,0.66772925 0 0 0 0.807564,0 L 9.4791286,14.778386 11.109149,13.5447 14.4238,11.062436 l 0.0082,-0.0066 a 4.0179594,4.0179594 0 0 0 1.33053,-4.6368967 z"/>
+				</svg>
+              </span>
+              <span class="username">{{ site.gitlab_username }}</span>
+            </a>
+          </li>
+          {% endif %}
         </ul>
       </div>
       <div  class="footer-col  footer-col-3">
