--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,7 +15,8 @@ body {
 	font-family: $base-font-family;
 	font-size: $base-font-size;
 	line-height: $base-line-height;
-	font-weight: 300;
+	text-rendering: optimizelegibility;
+	font-weight: 400;
 	color: $text-color;
 	background-color: $background-color;
 	-webkit-text-size-adjust: 100%;
@@ -68,7 +69,7 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-	font-weight: 300;
+	font-weight: 600;
 }
 
 /**
