Fix repo page scss

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -249,6 +249,9 @@
 .repo-grid{
 	display: grid;
 	grid-template-columns: 1fr 1fr;
+	@include media-query($on-laptop) {
+		grid-template-columns: 1fr;
+	}
 }
 .repo-type{
 	border: solid 2px #e8e8e8;
