--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="{{ "/main.css" | prepend: site.baseurl }}">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}"> 
+	<link rel="icon" type="image/x-icon" href="favicon.ico" />
 	<script src="/CDN/sign.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
