🎨 Add error layout

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -185,7 +185,7 @@ table {
 	border-collapse: collapse;
 	th, td {
 		padding: 6px 13px;
-		border: 1px solid #30363d63;
+		border: 1px solid $grey-color-dark;
 	}
 	p{
 		margin: 0;
