--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -239,7 +239,7 @@
  * Repo list style
  */
 .repo-box{
-	border: solid 2px #e8e8e8;
+	border: solid 2px $grey-color-light;
 	border-radius: 15px;
 	padding: 15px;
 	margin: 5px;
@@ -254,7 +254,7 @@
 	}
 }
 .repo-type{
-	border: solid 2px #e8e8e8;
+	border: solid 2px $grey-color-light;
 	border-radius: 15px;
 	padding: 2px 5px;
 	font-size: 10px;
