🐛 Fix license link overflow

--- a/_includes/repos.html
+++ b/_includes/repos.html
@@ -39,7 +39,7 @@
 			</a>
 			{% endif %}
 			{% if post.license %}
-			<a href="https://choosealicense.com/licenses/{{post.license.key}}" target="_blank">
+			<a href="https://choosealicense.com/licenses/{{post.license.key}}" class="licenses-link" target="_blank">
 				<span>{{post.license.name}}</span>
 			</a>
 			{% endif %}
