--- a/main.scss
+++ b/main.scss
@@ -9,70 +9,71 @@ $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$spacing-unit:     30px;
+$spacing-unit:	 30px;
 
 /* Light mode */
 :root {
-    --text-color:       #111;
-    --background-color: #fdfdfd;
-    --brand-color: #2a7ae2;
-    --brand-color-dark: #1c67ca;
-    --grey-color: #828282;
-    --grey-color-light: #b5b5b5;
-    --grey-color-dark: #636363;
+	--text-color:	   #111;
+	--background-color: #fdfdfd;
+	--brand-color: #2a7ae2;
+	--brand-color-dark: #1c67ca;
+	--grey-color: #828282;
+	--grey-color-light: #b5b5b5;
+	--grey-color-dark: #636363;
 }
 
 /* Dark mode */
 @media (prefers-color-scheme: dark) {
-    :root {
-        --text-color:  	#f8f8f2;
-        --background-color:  	#282a36;
-        --brand-color: #50fa7b;
-        --brand-color-dark:  	#ff79c6;
-        --grey-color: #6272a4;
-        --grey-color-light: #798dc9;
-        --grey-color-dark: #54628c;
-    }
+	:root {
+		--text-color:  	#f8f8f2;
+		--background-color:  	#282a36;
+		--brand-color: #50fa7b;
+		--brand-color-dark:  	#ff79c6;
+		--grey-color: #6272a4;
+		--grey-color-light: #798dc9;
+		--grey-color-dark: #54628c;
+	}
 }
 
 $background-color: var(--background-color);
-$text-color:       var(--text-color);
-$brand-color:      var(--brand-color);
+$text-color:	   var(--text-color);
+$brand-color:	  var(--brand-color);
 $brand-color-dark: var(--brand-color-dark);
 
-$grey-color:       var(--grey-color);
+$grey-color:	   var(--grey-color);
 $grey-color-light: var(--grey-color-light);
 $grey-color-dark:  var(--grey-color-dark);
 
 // Width of the content area
-$content-width:    900px;
+$content-width:	900px;
 
-$on-palm:          600px;
-$on-laptop:        800px;
+$on-palm:		  600px;
+$on-laptop:		800px;
 
 // Using media queries with like this:
 // @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
+//	 .wrapper {
+//		 padding-right: $spacing-unit / 2;
+//		 padding-left: $spacing-unit / 2;
+//	 }
 // }
 @mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
+	@media screen and (max-width: $device) {
+		@content;
+	}
 }
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-    "base",
-    "layout",
-    "syntax-highlighting",
-    "custom"
+	"base",
+	"print",
+	"layout",
+	"syntax-highlighting",
+	"custom"
 ;
 
 body {
-    height: 100vh;
-    display: grid;
-    grid-template-rows: auto 1fr auto;
+	height: 100vh;
+	display: grid;
+	grid-template-rows: auto 1fr auto;
 }
