--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 	<div class="wrapper">
 		<a class="site-title" href="{{ site.baseurl }}/">
-			<div id="logo" width="32" height="32"></div>
+			<div id="logo"></div>
 		</a>
 		<nav class="site-nav">
 			<a href="#" class="menu-icon">
