--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -239,12 +239,14 @@
  * Repo list style
  */
 .repo-box{
-	border: solid 2px $grey-color-light;
 	border-radius: 15px;
 	padding: 15px;
 	margin: 5px;
 	display: grid;
 	grid-template-rows: 23px 60px 20px;
+	border-width: 0.5px 1px 2px 1px;
+	border-style: solid;
+	border-color: $grey-color-light;
 }
 .repo-grid{
 	display: grid;
