--- a/_layouts/gist.html
+++ b/_layouts/gist.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /pages/gist/
+hide: true
 ---
 <div class="home">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"></script>
@@ -13,7 +13,7 @@ permalink: /pages/gist/
 		var js = document.createElement("script");
 		js.type = "text/javascript";
 		var params = new URLSearchParams(document.location.search);
-		var src = "https://api.github.com/gists/"+params.get("gist");
+		var src = "https://api.github.com/gists/{{page.id}}";
 		$.get(src,function(data){
 			var converter = new showdown.Converter({ tables: true, emoji: true, ghCompatibleHeaderId: true, tasklists: true});
 			var file = (data.files[Object.keys(data.files)]);
