--- a/_includes/gists.html
+++ b/_includes/gists.html
@@ -2,7 +2,7 @@
 <li style="border-bottom: 1px solid lightgray;">
 	<span class="post-meta">{{ post.created_at | date: "%b %-d, %Y" | replace: 'Jan', 'Janvier' | replace: 'Feb', 'Février' | replace: 'Mar', 'Mars' | replace: 'Apr', 'Avril' | replace: 'May', 'Mai' | replace: 'Jun', 'Juin' | replace: 'Jul', 'Juillet' | replace: 'Aug', 'Août' | replace: 'Sep', 'Septembre' | replace: 'Oct', 'Octobre' | replace: 'Nov', 'Novembre' | replace: 'Dec', 'Décembre' }}</span>
 	<h2>
-		<a class="post-link" href="{{post.id | datapage_url: 'gist'}}">{{post.files | first | first}}</a>
+		<a class="post-link" href="{{post.id | datapage_url: '/gist'}}">{{post.files | first | first}}</a>
 	</h2>
 	<p style="margin: -15px 0px 5px 0px;">{{ post.description }}</p>
 </li>
