--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,11 +12,11 @@
 				</svg>
 			</a>
 			<div class="trigger">
-				{% for page in site.pages %}
+				{%- for page in site.pages -%}
 					{% if page.title and page.hide != true %}
-					<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}{{page.hide}}</a>
+					<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
 					{% endif %}
-				{% endfor %}
+				{%- endfor -%}
 			</div>
 		</nav>
 	</div>
