🐎 Improves the display of gists

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 			</div>
 			<div class="footer-col footer-col-2">
 				<ul class="social-media-list">
-					{% if site.github_username %}
+					{%- if site.github_username -%}
 					<li>
 						<a href="https://github.com/{{ site.github_username }}">
 							<span class="icon icon--github">
@@ -20,8 +20,8 @@
 							<span class="username">{{ site.github_username }}</span>
 						</a>
 					</li>
-					{% endif %}
-					{% if site.twitter_username %}
+					{%- endif -%}
+					{%- if site.twitter_username -%}
 					<li>
 						<a href="https://x.com/{{ site.twitter_username }}">
 							<span class="icon icon--twitter">
@@ -32,8 +32,8 @@
 							<span class="username">{{ site.twitter_username }}</span>
 						</a>
 					</li>
-					{% endif %}
-					{% if site.gitlab_username %}
+					{%- endif -%}
+					{%- if site.gitlab_username -%}
 					<li>
 						<a href="https://gitlab.com/{{ site.gitlab_username }}">
 							<span class="icon icon--gitlab">
@@ -44,7 +44,7 @@
 							<span class="username">{{ site.gitlab_username }}</span>
 						</a>
 					</li>
-					{% endif %}
+					{%- endif -%}
 				</ul>
 			</div>
 			<div class="footer-col footer-col-3">
