--- a/_layouts/gist.html
+++ b/_layouts/gist.html
@@ -7,13 +7,15 @@ hide: true
 		{{page.raw_content | markdownify}}
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/languages/powershell.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/base16/dracula.min.css"/>
 	<script>
 		document.addEventListener("DOMContentLoaded", function() {
 			hljs.highlightAll();
 		});
 	</script>
+	{%- if page.raw_content contains "```ps" -%}
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/languages/powershell.min.js"></script>
+	{%- endif -%}
 	{%- if page.raw_content contains "mermaid" -%}
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/11.11.0/mermaid.min.js"></script>
 	<script>
