🎨 Remove the gray background from mermaid diagrams

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -123,8 +123,11 @@ pre {
 		padding: 1px 5px;
 		border-radius: 3px;
 		font-size: 15px;
-		svg {
+		
+		@media (prefers-color-scheme: dark) {
+		  svg {
 			background: $grey-color;
+		  }
 		}
 	}
 }
