♿ Adds ARIA roles for accessibility

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<footer class="site-footer" role="contentinfo">
 	<div class="wrapper">
 		<div class="footer-col-wrapper">
 			<div class="footer-col footer-col-1">
