--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="site-header">
+<header class="site-header" role="banner">
 	<div class="wrapper">
 		<a class="site-title" href="{{ site.baseurl }}/">
 			<div id="logo"></div>
